@@ -30,3 +30,10 @@
     <p>Text goes here.</p>
   </body>
 </html>
+
+<!-- 
+  Local Variables:
+  mode: html
+  indent-tabs-mode: nil
+  End:
+-->
